WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259093
REGRESSION (Safari 16.3): Passing "noopener" as third argument opens tabs into new window
https://bugs.webkit.org/show_bug.cgi?id=259093
Summary
REGRESSION (Safari 16.3): Passing "noopener" as third argument opens tabs int...
Erica
Reported
2023-07-10 19:31:17 PDT
Given MDN documentation and prior behavior, the following function call shall open in a "new tab" if the browser setting is set to "automatically" window.open(path, "_blank", "noopener=true"); Per MDN: "Note: Specifying any features in the windowFeatures parameter, other than noopener or noreferrer, also has the effect of requesting a popup." "If popup is not enabled, and there are no window features declared, the new browsing context will be a tab." Given this, the expectation is the above line of code should open in new tab. However it is opening in a new window. This is reproducible across multiple user environments.
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2023-07-11 08:49:00 PDT
Thank you for the report! Could you please clarify which versions of Safari this worked in, and which work incorrectly?
Erica
Comment 2
2023-07-11 09:32:35 PDT
Thanks for triaging this, the version of current not working version of safari is Version 16.3 (18614.4.6.1.5). Per our product manager, this was previously working for him on Version 16.2 (18614.3.7.1.5). Thank you!
Radar WebKit Bug Importer
Comment 3
2023-07-11 09:55:05 PDT
<
rdar://problem/112086061
>
Ahmad Saleem
Comment 4
2023-07-14 12:16:30 PDT
Based on tags on WebKit GitHub for macOS:
https://github.com/WebKit/WebKit/compare/releases/Apple/Safari-16.2-macOS-13.1...releases/Apple/Safari-16.3-macOS-13.2.1
There are 200+ commits. Just sharing above link for quick analysis by anyone in future.
Ahmad Saleem
Comment 5
2023-07-14 12:33:14 PDT
(In reply to Ahmad Saleem from
comment #4
)
> Based on tags on WebKit GitHub for macOS: > >
https://github.com/WebKit/WebKit/compare/releases/Apple/Safari-16.2-macOS-13
. > 1...releases/Apple/Safari-16.3-macOS-13.2.1 > > There are 200+ commits. > > Just sharing above link for quick analysis by anyone in future.
Only this commit from above has any reference to 'pop-up' -
https://bugs.webkit.org/show_bug.cgi?id=247585
Remy Demarest
Comment 6
2023-08-18 18:26:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16857
Remy Demarest
Comment 7
2023-08-23 12:00:36 PDT
***
Bug 174388
has been marked as a duplicate of this bug. ***
Remy Demarest
Comment 8
2023-08-23 12:00:48 PDT
***
Bug 174271
has been marked as a duplicate of this bug. ***
EWS
Comment 9
2023-08-28 08:30:01 PDT
Committed
267354@main
(301fe8a7cb26): <
https://commits.webkit.org/267354@main
> Reviewed commits have been landed. Closing PR #16857 and removing active labels.
Brent Fulgham
Comment 10
2023-12-21 15:17:53 PST
We believe this issue is resolved in the current shipping releases of iOS 17.2 and macOS 14.2.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug